# bevy-cellular-automata-forest-fire-model

./: Cargo.toml  README.md
src/: main.rs
