[package]
name = "bevy-cellular-automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "png",
    "x11",
    # The following features are required because of https://github.com/bevyengine/bevy/discussions/9100
    "ktx2",
    "zstd",
    "tonemapping_luts",
] }
bevy-inspector-egui = "0.20"
bevy_life = { version = "0.8.0", features = ["auto-coloring"] }
rand = "0.8.5"
