[package]
name = "bevy-cellular-automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = "0.11.3"
bevy_ecs_tilemap = { version = "0.11.1", features = ["render"] }
log = "0.4"
rand = "0.8.5"
regex = "1.5.4"
serde = { version = "1", features = ["derive"], optional = true }
